# who_am_i

./: .gitignore  README.md  dev  prod  pyproject.toml  uwsgi.ini
Docker/: README.md  docker-compose.build.yml  docker-compose.run.yml  docker-compose.volume.yml  docker-compose.yml
Docker/grafana/: Dockerfile
Docker/locust/: Dockerfile
Docker/nginx/: Dockerfile  nginx.conf  python.conf
Docker/nginx-exporter/: Dockerfile
Docker/prometheus/: Dockerfile  prometheus.yml
Docker/python/: Dockerfile
Docker/python/app/: desktop.ini  pyproject.toml  uwsgi.ini
Docker/python/app/api/: models.py  urls.py  views.py
Docker/python/app/core/: settings.py  urls.py
Docker/python/app/frontend/: views.py
Docker/python/app/frontend/src/components/: navbar.jsx  projects.jsx  skills.jsx
Docker/python/app/frontend/src/pages/: home.jsx
Docker/python/app/frontend/templates/frontend/: index.html
api/: adapters.py  admin.py  exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
api/migrations/: 0001_initial.py  0002_alter_contentmetadata_options_and_more.py  0002_user.py  0003_alter_skillset_badge_file.py  0003_projectinfo_user_id.py  0004_filedinfo.py
core/: settings.py  urls.py
frontend/: package.json  urls.py  webpack.config.js
frontend/public/: index.html
frontend/src/: index.jsx
frontend/src/components/: aboutMe.jsx  intro.jsx  login.jsx  loginButton.jsx  navbar.jsx  projectForm.jsx  projects.jsx  skills.jsx
frontend/src/pages/: home.jsx  login.jsx  profile.jsx
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
static/frontend/: main.js  main.js.LICENSE.txt
web_socket/: routing.py  urls.py
