[tool.poetry]
name = "cjw-portfolio"
version = "0.1.0"
description = "Website for my portfolios"
authors = ["Creeper Eye <iostream1204@gmail.com>"]
license = "creepereye"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
uwsgi = "^2.0.27"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
locust = "^2.31.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
